
2009-09-08 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * add print functions

        * add functor of compare

        * use 'using' declaration

        * refactoring

        * add ignore patterns for Mercurial

        * 1.02 released.

2009-08-08 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * append appropriate const keyword

        * refactoring

        * 1.01 released.

2009-07-04 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * resolved problem memory leak occurs when default copy constructor set in motion.

        * 1.00 released.

2009-06-08 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * enhance readability

        * changed behavior when conflicted

        * decliment parameter for patch function 

        * 0.07 released.

2009-05-08 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * add flag for recording only editdistance
        
        * add sample of unidiff for string (unistrdiff)
        
        * add unserious diff. ver 0.03 has this feture.
        
        * fixed bug for merge
        
        * added function getUniHunks

        * 0.06 released.
        
2008-12-12 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * added sample of diff3 (strdiff3, intdiff3)
        
        * added diff3 
        
        * + -> - to - -> + with Unified Diff Format 
        
        * added function uniPatch. this function can patch with Unified Diff Format Data Structure

        * dtl Import Unified Diff Format Data Structure from unidiff.cpp.

        * fixed bug. function check whether file exists(common.cpp)
        
        * 0.05 released.

2008-11-10 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * Improved accuracy of diff

        * fixed serious memory bug for patch

        * changed type of argument in function fileExists(common.hpp, common.cpp)
        
        * 0.04 released.
        
2008-11-06 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * add erorr check for sample programs
        
        * 0.03 released.
        